<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BudgetHashtag</string>
    <string name="warning_log_maj_bd" tools:ignore="PluralsCandidate">"Mise à jour de la version %1$d vers la version %2$d, les anciennes données sont détruites "</string>
    <string name="ex_msg_add">"Echec de l'ajout d'une ligne dans %1$s"</string>
    <string name="portefeuille_default_lib">Portefeuille personnel</string>
    <string name="ex_msg_create_default_portefeuille">"Une erreur c'est produite lors de la création du portefeuille"</string>
    <string name="ex_msg_save_budget">"Une erreur c'est produite lors de la sauvegarde du budget"</string>
    <string name="ex_msg_insert">"Une erreur c'est produite lors de l'insertion : "</string>
    <string name="add">Ajouter</string>
    <string name="add_budget">Ajouter budget</string>
    <string name="add_transaction">Ajouter transaction</string>
    <string name="hint_libelle_budget">Libelle</string>
    <string name="hint_montant_budget">Montant</string>
    <string name="libelle_card">Libelle :</string>
    <string name="montant_card">Montant :</string>
    <string name="toast_export_done">Export terminé</string>
    <string name="content_description_icon_budget">icon budget</string>
    <string name="budget">Budget</string>
    <string name="AjoutOK">Ajout OK</string>
    <string name="transaction">Transaction</string>
    <string name="menu_save">Sauvegarder</string>
    <string name="menu_export">Exporter</string>
    <string name="menu_import">Importer</string>
    <string name="menu_contact">Contact dev</string>
    <string name="menu_show_website">show website</string>
    <string name="menu_send_mail">Envoyer un email au developpeur</string>
    <string name="mail_subject">[BudgetHashtag]Ton sujet:</string>
    <string name="mail_body">ton message</string>
    <string name="dev_email">wakan.powa+budgethashtag@gmail.com</string>
    <string name="website_url">http://twitter.fr/wakanpowa</string>
    <string name="ex_msg_save_transaction">error lors de la sauvegarde de la transaction</string>
    <string name="ex_msg_save_budget_in_transaction">erreur lors de l\'engistrement du budget dans la transaction
    </string>
</resources>
