<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="fr.budgethashtag.viewmodel.AddBudgetViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>


        </android.support.design.widget.AppBarLayout>

        <EditText
            android:id="@+id/txt_libelle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_libelle_budget"
            android:inputType="textAutoCorrect"
            android:text="@={viewModel.libelle}"/>

        <EditText
            android:id="@+id/txt_previsionnel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_montant_budget"
            android:inputType="numberDecimal"
            android:text="@={viewModel.montant}"/>

        <Button
            android:id="@+id/btn_save_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{()-> viewModel.onClickedBtnAddBudgetActivity(0)}"
            android:text="@string/add_budget"/>
    </LinearLayout>
</layout>